Fix sonar warnings